File search fix